Потренировалась с синхронизацией изменения переменной

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,10 @@ project(tutorial_cpp LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_executable(tutorial_cpp main.cpp vector.cpp)
+add_executable(tutorial_cpp
+    main.cpp
+    vector.cpp
+    thread.cpp)
 
 install(TARGETS tutorial_cpp
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})
