Улучшила 6 лабу с потоками

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,5 +19,6 @@ add_executable(laba4 laba4.cpp)
 add_executable(laba5 laba5_main.cpp laba5_class.cpp)
 add_executable(laba6 laba6.cpp)
 add_executable(laba6_thread laba6_thread.cpp)
+add_executable(laba6_mutex laba6_mutex.cpp)
 add_executable(laba7 laba7.cpp)
 add_executable(laba8 laba8.cpp)
